kubernetes/apps/adventurelog/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: adventurelog
  labels:
    backup: enabled
