kubernetes/apps/adventurelog/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adventurelog
  namespace: adventurelog
spec:
  selector:
    app: adventurelog
  ports:
    - name: http
      port: 80
      targetPort: http
