kubernetes/apps/adventurelog/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: adventurelog
  namespace: adventurelog
spec:
  parentRefs:
    - name: internal
      namespace: cilium-gateway
  hostnames:
    - trips.home.demivan.me
  rules:
    - backendRefs:
        - name: adventurelog
          port: 80
